# crawler-poc

./: .gitignore  README.md  capture_frames_for_planning.py  extract_dataset.py  extract_dataset_carla.py  extract_dataset_carla_cuda.py  extract_frame_carla.py  extract_frame_carla_cuda.py  extract_frame_dataset.py  remote_control  remote_ctrl  selfdrive_carla.py  simulation.py  temp.py  vision.py  vision_carla.py  vision_dataset.py
acquisition/: source_camera.py  source_camera_from_video_dataset.py
assets/: rtkbosque_classes.txt  rtkbosque_colors.txt
bev/: CMakeLists.txt  Makefile  bev  bev_original.py  bev_projector.py  bev_video.cpp  matmul.cu  matmul.h
carlasim/: carla_actor.py  carla_camera.py  carla_client.py  carla_sim_controller.py  ego_car.py  ego_car_remote_controller.py  frame_segment_converter.py  frame_segment_converter_cuda.py  gps.py  mqtt_client.py  remote_controller.py  simulation_log.py  start_carla_simulator.sh  vehicle_hal.py  video_streamer.py
carlasim/remote_controller_client/: CMakeLists.txt  manual_control_api_test.cpp
carlasim/sensors/: carla_camera.py  data_sensors.py
containers/: Dockerfile_ubuntu18-py36  Dockerfile_ubuntu18-py36-cu118  Dockerfile_ubuntu20-py38-cu118
misc/: label_colorizer.py  mission_builder.py
model/: global_planner.py  slam.py  vehicle_pose.py  waypoint.py
motion/: discrete_component.py  lateral_controller.py  links.txt  longitudinal_controller.py  motion_controller.py  path_position_finder.py  reference_path.py
motion/old/: lateral_controller copy.py  longitudinal_controller copy.py
notebooks/: Untitled.ipynb  control_layer.ipynb  controller.ipynb  cuda_study.py  debug.ipynb  discover_pixel_relation_cam.ipynb  goals.txt  lateral_controller.ipynb  local_goal_point_dev.ipynb  longitudinal_controller_research.ipynb  path_locator.ipynb  study_map_carla.ipynb  test_planner_a_start.ipynb  tests.ipynb  vision.ipynb
notebooks/.ipynb_checkpoints/: debug-checkpoint.ipynb
old/: vision_carla.py  vision_carla_debug.py
planner/: astar.py  goal_point_discover.py  local_planner.py  motion_planner.py  occupancy_grid.py  simple_global_planner.py  simple_slam.py  stub_global_planner.py  stub_slam.py  vehicle_pose.py  waypoint.py
planner/mapping/: map_coordinate_converter.py  map_coordinate_converter_carla copy.py  map_coordinate_converter_carla.py
planner/motion/: direction_controller.py  old.py  velocity_controller.py
planner/tests/: goal_point_discover_test.py  map_coordinate_test.py  motion_planner_test_speed.py  occupancy_grid_test.py  run.py
segmentation/: frame_segmenter.py  frame_segmenter_jetson.py  frame_segmenter_onnx_runtime.py
utils/: extract_frame.py  func_timing.py  sequence_log.py  video_output.py
